--- a/WebShopHangHieu/src/main/webapp/templates/AdminBase.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/AdminBase.xhtml
@@ -11,6 +11,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
         <h:outputStylesheet name="WebControllerStyle.css" library="CSS"/>
+        <h:outputScript name="Admin.js" library="js"/>
         <title>Admin</title>
     </h:head>
 
