--- a/WebShopHangHieu/src/main/webapp/templates/ModelInsertBrand.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/ModelInsertBrand.xhtml
@@ -4,7 +4,7 @@
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-    Add Category
+    Add Brand
     </button>
 
     <!-- The Modal -->
