--- a/WebShopHangHieu/src/main/webapp/templates/base.xhtml
+++ b/WebShopHangHieu/src/main/webapp/templates/base.xhtml
@@ -15,9 +15,11 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css"/>
+        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
+        
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" 
             integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" 
             crossorigin="anonymous"/>
@@ -30,6 +32,7 @@
       <h:outputScript name="OwlCarosel.js" library="js"/>
       <h:outputScript name="zoomjavascript.js" library="js"/>
       <h:outputStylesheet name="productdetail.css" library="CSS"/>
+      <h:outputStylesheet name="Checkout.css" library="CSS"/>
       <h:outputScript name="Shop.js" library="js"/>
          
     </h:head>
